# logos-execution-zone

./: .gitignore  Cargo.toml  Justfile  README.md  clippy.toml  docker-compose.override.yml  docker-compose.yml  flake.nix  rust-toolchain.toml
.github/workflows/: ci.yml  publish_image.yml  publish_images.yml
bedrock/: docker-compose.yml
bedrock_client/: Cargo.toml
bedrock_client/src/: lib.rs
common/: Cargo.toml
common/src/: block.rs  borsh_base64.rs  config.rs  error.rs  lib.rs  sequencer_client.rs  test_utils.rs  transaction.rs
common/src/rpc_primitives/: errors.rs  message.rs  mod.rs  parser.rs  requests.rs
completions/: README.md
completions/bash/: wallet
completions/zsh/: _wallet
configs/docker-all-in-one/indexer/: indexer_config.json
configs/docker-all-in-one/sequencer/: sequencer_config.json
docs/LEZ testnet v0.1 tutorials/: amm.md  custom-tokens.md  token-transfer.md  wallet-setup.md
examples/program_deployment/: Cargo.toml  README.md
examples/program_deployment/methods/: Cargo.toml
examples/program_deployment/methods/guest/: Cargo.toml
explorer_service/: Cargo.toml  Dockerfile
explorer_service/src/: api.rs  format_utils.rs  lib.rs  main.rs
explorer_service/src/components/: account_preview.rs  block_preview.rs  mod.rs  transaction_preview.rs
explorer_service/src/pages/: account_page.rs  block_page.rs  main_page.rs  mod.rs  transaction_page.rs
indexer/core/: Cargo.toml
indexer/core/src/: block_store.rs  config.rs  lib.rs
indexer/service/: Cargo.toml  Dockerfile  docker-compose.yml  docker-entrypoint.sh
indexer/service/configs/: indexer_config.json
indexer/service/protocol/: Cargo.toml
indexer/service/protocol/src/: convert.rs  lib.rs
indexer/service/rpc/: Cargo.toml
indexer/service/rpc/src/: lib.rs
indexer/service/src/: lib.rs  main.rs  mock_service.rs  service.rs
integration_tests/: Cargo.toml
integration_tests/src/: config.rs  lib.rs
integration_tests/tests/: account.rs  amm.rs  block_size_limit.rs  config.rs  indexer.rs  keys_restoration.rs  pinata.rs  program_deployment.rs  token.rs  tps.rs  wallet_ffi.rs
integration_tests/tests/auth_transfer/: main.rs  private.rs  public.rs
key_protocol/: Cargo.toml
key_protocol/src/: initial_state.rs  lib.rs
key_protocol/src/key_management/: ephemeral_key_holder.rs  mod.rs  secret_holders.rs
key_protocol/src/key_management/key_tree/: chain_index.rs  keys_private.rs  keys_public.rs  mod.rs  traits.rs
key_protocol/src/key_protocol_core/: mod.rs
mempool/: Cargo.toml
mempool/src/: lib.rs
nssa/: Cargo.toml  build.rs
nssa/core/: Cargo.toml
nssa/core/src/: account.rs  circuit_io.rs  commitment.rs  encoding.rs  lib.rs  nullifier.rs  program.rs
nssa/core/src/account/: data.rs
nssa/core/src/encryption/: mod.rs  shared_key_derivation.rs
nssa/src/: error.rs  lib.rs  program.rs  state.rs
nssa/src/encoding/: privacy_preserving_transaction.rs  program_deployment_transaction.rs  public_transaction.rs
nssa/src/merkle_tree/: default_values.rs  mod.rs
nssa/src/privacy_preserving_transaction/: circuit.rs  message.rs  mod.rs  transaction.rs  witness_set.rs
nssa/src/program_deployment_transaction/: message.rs  mod.rs  transaction.rs
nssa/src/public_transaction/: message.rs  mod.rs  transaction.rs  witness_set.rs
nssa/src/signature/: bip340_test_vectors.rs  mod.rs  private_key.rs  public_key.rs
program_methods/: Cargo.toml
program_methods/guest/: Cargo.toml
programs/amm/: Cargo.toml
programs/amm/core/: Cargo.toml
programs/amm/core/src/: lib.rs
programs/amm/src/: add.rs  full_tests.rs  lib.rs  new_definition.rs  remove.rs  swap.rs  tests.rs
programs/associated_token_account/src/: create.rs
programs/private_airdrop/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md
programs/private_airdrop/circuits/claim_proof/: Cargo.toml
programs/private_airdrop/circuits/claim_proof/src/: main.rs
programs/private_airdrop/cli/: Cargo.toml
programs/private_airdrop/cli/src/: main.rs
programs/private_airdrop/core/: Cargo.toml
programs/private_airdrop/idl/: private_airdrop.json
programs/private_airdrop/mini-app/: index.html  package.json  vite.config.ts
programs/private_airdrop/scripts/: demo_end_to_end.sh
programs/private_airdrop/src/: claim.rs  lib.rs  (+3 more)
programs/token/: Cargo.toml
sequencer/core/: Cargo.toml
sequencer/service/: Cargo.toml  Dockerfile  docker-compose.yml  docker-entrypoint.sh
sequencer/service/configs/debug/: sequencer_config.json
sequencer/service/configs/docker/: sequencer_config.json
sequencer/service/protocol/: Cargo.toml
sequencer/service/protocol/src/: lib.rs
sequencer/service/rpc/: Cargo.toml
sequencer/service/rpc/src/: lib.rs
sequencer/service/src/: lib.rs  main.rs  service.rs
sequencer_core/: Cargo.toml
sequencer_core/src/: block_settlement_client.rs  block_store.rs  config.rs  lib.rs
sequencer_rpc/: Cargo.toml
sequencer_rpc/src/: lib.rs  net_utils.rs  process.rs
sequencer_rpc/src/types/: err_rpc.rs
sequencer_runner/: Cargo.toml  Dockerfile
sequencer_runner/configs/debug/: sequencer_config.json
sequencer_runner/configs/docker/: sequencer_config.json
sequencer_runner/src/: lib.rs
storage/: Cargo.toml
storage/src/: error.rs  indexer.rs  lib.rs  sequencer.rs
test_program_methods/: Cargo.toml
test_program_methods/guest/: Cargo.toml
testnet_initial_state/: Cargo.toml
testnet_initial_state/src/: lib.rs
wallet/: Cargo.toml
wallet-ffi/: Cargo.toml  wallet_ffi.h
wallet-ffi/src/: account.rs  error.rs  keys.rs  lib.rs  pinata.rs  sync.rs  transfer.rs  types.rs  wallet.rs
wallet/configs/debug/: wallet_config.json
wallet/src/: chain_storage.rs  config.rs  helperfunctions.rs  lib.rs  main.rs  pinata_interactions.rs  poller.rs  privacy_preserving_tx.rs  transaction_utils.rs
wallet/src/cli/: account.rs  chain.rs  config.rs  mod.rs
wallet/src/cli/programs/: amm.rs  native_token_transfer.rs  pinata.rs  token.rs
wallet/src/program_facades/: amm.rs  pinata.rs  token.rs
wallet/src/program_facades/native_token_transfer/: deshielded.rs  mod.rs  private.rs  public.rs  shielded.rs
(+24 files in other folders)
