[package]
name = "common"
version = "0.1.0"
edition = "2024"
license = { workspace = true }

[dependencies]
nssa.workspace = true
nssa_core.workspace = true

anyhow.workspace = true
thiserror.workspace = true
serde_json.workspace = true
serde.workspace = true
serde_with.workspace = true
reqwest.workspace = true
sha2.workspace = true
log.workspace = true
hex.workspace = true
borsh.workspace = true
bytesize.workspace = true
base64.workspace = true
url.workspace = true
logos-blockchain-common-http-client.workspace = true
tokio-retry.workspace = true
