[package]
name = "common"
version = "0.1.0"
edition = "2024"
license = { workspace = true }

[lints]
workspace = true

[dependencies]
nssa.workspace = true
nssa_core.workspace = true

anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_with.workspace = true
base64.workspace = true
sha2.workspace = true
log.workspace = true
hex.workspace = true
borsh.workspace = true
logos-blockchain-common-http-client.workspace = true
