[package]
name = "nssa"
version = "0.1.0"
edition = "2024"
license = { workspace = true }

[lints]
workspace = true

[dependencies]
nssa_core = { workspace = true, features = ["host"] }

anyhow.workspace = true
thiserror.workspace = true
risc0-zkvm.workspace = true
serde.workspace = true
serde_with.workspace = true
sha2.workspace = true
rand.workspace = true
borsh.workspace = true
hex.workspace = true
secp256k1 = "0.31.1"
risc0-binfmt = "3.0.2"
log.workspace = true

[build-dependencies]
risc0-build = "3.0.3"
risc0-binfmt = "3.0.2"

[dev-dependencies]
token_core.workspace = true
test_program_methods.workspace = true

env_logger.workspace = true
hex-literal = "1.0.0"
test-case = "3.3.1"

[features]
default = []
prove = ["risc0-zkvm/prove"]
test-utils = []
