[package]
name = "sequencer_rpc"
version = "0.1.0"
edition = "2024"
license = { workspace = true }

[dependencies]
nssa.workspace = true
common.workspace = true
mempool.workspace = true
sequencer_core = { workspace = true }
bedrock_client.workspace = true

anyhow.workspace = true
serde_json.workspace = true
log.workspace = true
serde.workspace = true
actix-cors.workspace = true
futures.workspace = true
base58.workspace = true
hex.workspace = true
tempfile.workspace = true
base64.workspace = true
itertools.workspace = true
actix-web.workspace = true
tokio.workspace = true
borsh.workspace = true
bytesize.workspace = true

[dev-dependencies]
sequencer_core = { workspace = true, features = ["mock"] }

[features]
default = []
# Includes types to run the sequencer in standalone mode
standalone = ["sequencer_core/mock"]
