[package]
name = "programs"
version = "0.1.0"
edition = "2024"
license = { workspace = true }

[lints]
workspace = true

[dependencies]
nssa_core.workspace = true
token_core.workspace = true
token_program.workspace = true
amm_core.workspace = true
amm_program.workspace = true
risc0-zkvm.workspace = true
serde = { workspace = true, default-features = false }
