[package]
name = "amm_program"
version = "0.1.0"
edition = "2024"
license = { workspace = true }

[dependencies]
nssa = { workspace = true, optional = true, features = ["test-utils"], default-features = true }
nssa_core.workspace = true
token_core.workspace = true
amm_core.workspace = true

[features]
with-nssa = ["nssa"]