[package]
name = "private_airdrop_cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lez-cli-private-airdrop"
path = "src/main.rs"

[dependencies]
private_airdrop_core = { path = "../../core" }
lez-sdk = { version = "0.1", optional = true }
risc0-zkvm = { version = "1.0", features = ["prove"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
hex = "0.4"
sha2 = "0.10"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = ["lez-sdk"]
testnet = []
devnet = []
