[package]
name = "claim_proof"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { version = "1.0", default-features = false, features = ["std"] }
sha2 = { version = "0.10", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
bincode = "1.3"

[[bin]]
name = "claim_proof"
path = "src/main.rs"

[profile.release]
lto = true
opt-level = 3
